# oop-school-system

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
Utils/: absences_shower.cpp  absences_shower.hpp  citizenship_check.cpp  citizenship_check.hpp  failed_subject_shower.cpp  failed_subject_shower.hpp  first_page.cpp  first_page.hpp  management.cpp  management.hpp  student.cpp  student.hpp  student_card.cpp  student_card.hpp  subject_adder.cpp  subject_adder.hpp  subject_shower.cpp  subject_shower.hpp
